package ui.commands;

public abstract class UpdateCommand extends UICommand{
    abstract public void update();
}
